# look-alike-prospecting

./: agentic-lookalike-prospecting-starter-kit.xlsx
look-alike-prospecting/: .env.example  README.md  pyproject.toml
look-alike-prospecting/data/: closed_won_accounts.csv  crm_contacts.csv  suppression_accounts.csv  suppression_people.csv
look-alike-prospecting/examples/: sample_competitor_listing.json  sample_customer_listing.json  sample_similar_people.json  sample_updates.json
look-alike-prospecting/src/: config.py  models.py  outreach.py  scoring.py  suppressions.py
look-alike-prospecting/src/agents/: coordinator.py  copy_agent.py  research_agent.py  scoring_agent.py
look-alike-prospecting/src/clients/: ninjapear.py
look-alike-prospecting/src/pipelines/: loop_competitor_to_customers.py  loop_contacts_to_similar_people.py  loop_crm_to_competitors.py  loop_triggers_to_outreach.py
look-alike-prospecting/tests/: test_scoring.py  test_suppressions.py
